Remove login_email_address from RegistrarPoc (#2507)